# hlpp-l0-contracts

./: .env.example  .gitignore  CHANGELOG.md  L1A_DATASETS.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: test.yml
.omc/state/: agent-replay-73d2172a-4214-46ef-8558-323f3414102a.jsonl  hud-stdin-cache.json  mission-state.json  subagent-tracking.json
docs/: backfill-arg-schema-RFC.md  m12-conventions.md
docs/adr/: ADR-016-tiered-l1-l2-trigger.md
src/hlpp_l0_contracts/: __init__.py  backfillable.py  browser_fetch.py  git_meta.py  source_status.py  sources_config.py  stamping.py  validators.py
src/hlpp_l0_contracts/collector/: base.py
src/hlpp_l0_contracts/llm/: budget.py  provider.py  usage.py
src/hlpp_l0_contracts/protocols/: __init__.py  tier_a_stream.py
src/hlpp_l0_contracts/schema/: crawler_base.py  provenance.py  vintage.py
src/hlpp_l0_contracts/schemas/: __init__.py  alt_data.py  base.py  computed.py  normalized.py  research_papers.py
src/hlpp_l0_contracts/universe/: __init__.py  ticker_master_v1_seed.csv  v2_120.yaml
src/ht_l1_core/: __init__.py  backfillable.py  browser_fetch.py  http.py  idempotency.py  sources_config.py  stamping.py
tests/: test_alt_data_schema.py  test_backfillable.py  test_base_collector_provenance.py  test_browser_fetch.py  test_budget.py  test_hlpp_git_meta.py  test_hlpp_schemas_base.py  test_hlpp_universe.py  test_hlpp_validators.py  test_http.py  test_idempotency.py  test_lineage.py  test_m12_contract_invariants.py  test_protocols.py  test_provenance.py  test_provider.py  test_public_api.py  test_release_metadata.py  test_research_papers_schema.py  test_source_status.py  test_sources_config.py  test_stamping.py  test_usage.py  test_vintage.py
tests/schema/: test_crawler_base.py
(+6 files in other folders)
