[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ht-l1-core"
version = "0.1.8"
requires-python = ">=3.11"
dependencies = [
    "tenacity",
    "httpx",
    "pydantic>=2",
    "pandera",
    "pandas",
    "sqlalchemy",
    "pyyaml",
]
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
